Archive2/f5/9fa9b5077ca662/output
main.cpp: In function 'int main()':
main.cpp:15:8: error: expected identifier before 'int'
     a.~int();
        ^
